<resources>
    <string name="app_name">SudokuBot Solver</string>

    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>

    <string name="keypad_clear_cell">Clear</string>
    <string name="keypad_solve">Solve</string>
    <string name="keypad_unsolve">Unsolve</string>
    <string name="keypad_clear_all">Clear All</string>
    <string name="action_github">GitHub</string>

</resources>
