<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/keypad_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_1"/>
        <Button
            android:id="@+id/keypad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_2"/>
        <Button
            android:id="@+id/keypad_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_3"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/keypad_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_4"/>
        <Button
            android:id="@+id/keypad_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_5"/>
        <Button
            android:id="@+id/keypad_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_6"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/keypad_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_7"/>
        <Button
            android:id="@+id/keypad_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_8"/>
        <Button
            android:id="@+id/keypad_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keypad_9"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/clear_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/keypad_clear_all"/>

        <Button
            android:id="@+id/clear_cell_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/keypad_clear_cell"/>

        <Button
            android:id="@+id/solve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/keypad_solve"/>
    </LinearLayout>
</LinearLayout>